--- a/kraken-pro-expert/guides/spot-ws-book-v1.mdx
+++ b/kraken-pro-expert/guides/spot-ws-book-v1.mdx
@@ -1,22 +1,24 @@
 ---
-title: "spot ws uook v1"
+title: "Spot Websockets (v1) Book Checksum"
 description: "Learn about spot ws uook v1 in the Kraken Pro REST API."
 sidebarTitle: "spot ws uook v1"
 icon: "book"
 tag: "NEW"
 ---
-GuidesSpot ExchangeWebsocketsBook Checksum (v1)
-Spot Websockets (v1) Book Checksum
+
+# Spot Websockets (v1) Book Checksum
 
 This page describes how to maintain the book using the websockets v1 book channel.
 
-Book Updates​
+## Book Updates
 
 Each book update message will have a checksum value appended. The checksum is a CRC32 value based on the top 10 bids and 10 asks, and you can use it to verify that your data is correct and up to date by calculating the checksum independently and comparing it against the value provided.
 
 Checksums will not be sent in book snapshot messages, but rather only in book update messages. In the following sample book update messages, note the checksum field appears in the last bid or ask map structure in the message.
 
-Example book update with asks, bids and checksum​
+### Example book update with asks, bids and checksum
+
+```json
 [
     0,
     {
@@ -30,45 +32,48 @@ Example book update with asks, bids and checksum​
             ["0.04765", "0.00000500", "1582905486.493008"],
             ["0.04940", "0.00000500", "1582905486.493034"]
         ],
-        "c": "974947235" <-- CRC32 checksum is here.
+        "c": "974947235" 
     },
     "book-1000",
     "BTC/USD"
 ]
+```
 
-Book Checksum Calculation​
+## Book Checksum Calculation
 
 The checksum is computed by concatenating the top 10 bids and asks in the current book and then taking the CRC32 checksum of that string. The price and volume values should be treated as a string and formatted and concatenated as follows.
 
-CAUTION
+> **CAUTION**
+>
+> Processing order is important, the price levels will be received in the correct sequence from the exchange. The last entries in array are the most recent. Do not sort by timestamp, as there can be multiple of price level updates in a microsecond period.
 
-Processing order is important, the price levels will be received in the correct sequence from the exchange. The last entries in array are the most recent. Do not sort by timestamp, as there can be multiple of price level updates in a microsecond period.
-
-Example​
+### Example
 
 Consider you are subscribed at depth = 100 on the book channel and you receive the following book update message:
 
+```json
 [ "0.05000", "0.00000304", "1582905487.439814" ]
-
+```
 
 This update should be processed as follows:
 
-Apply the update to your local copy of the book.
+1.  Apply the update to your local copy of the book.
 
-For each of the top ten ask price levels, sorted by price from low to high:
-a. Remove the decimal character, '.', from the price, i.e. "0.05000" -> "005000".
-b. Remove all leading zero characters from the price. i.e. "005000" -> "5000".
-c. Add the formatted price string to the concatenation.
-d. Repeat steps a-c above but for the volume.
+2.  For each of the top ten ask price levels, sorted by price from low to high:
+    a.  Remove the decimal character, `.`, from the price, i.e. "0.05000" -> "005000".
+    b.  Remove all leading zero characters from the price. i.e. "005000" -> "5000".
+    c.  Add the formatted price string to the concatenation.
+    d.  Repeat steps a-c above but for the volume.
 
-For example, the price level corresponding to the sample update above would be formatted as "5000304". Note the timestamp values are not used in this calculation.
+    For example, the price level corresponding to the sample update above would be formatted as "5000304". Note the timestamp values are not used in this calculation.
 
-Repeat the above steps for the top ten bids, sorted by price from high to low.
+3.  Repeat the above steps for the top ten bids, sorted by price from high to low.
 
-Feed the concatenated string as input to a CRC32 checksum function, storing the result.
+4.  Feed the concatenated string as input to a CRC32 checksum function, storing the result.
 
-Cast the result (comprising 32 bits) as an unsigned 32-bit integer. This value can now be compared to the checksum received to ensure your local book is accurate. For example, given the following book state:
+5.  Cast the result (comprising 32 bits) as an unsigned 32-bit integer. This value can now be compared to the checksum received to ensure your local book is accurate. For example, given the following book state:
 
+```json
 {
 "as": [
     [ "0.05005", "0.00000500", "1582905487.684110" ],
@@ -93,23 +98,15 @@ Cast the result (comprising 32 bits) as an unsigned 32-bit integer. This value c
     [ "0.04955", "0.00000500", "1582905483.626664" ],
     [ "0.04950", "0.00000500", "1582905488.509872" ] ]
 }
-
+```
 
 The checksum input should be as follows (newlines appear here for convenience only and should not be included):
 
+```
 50055005010500501550050205005025500
 50305005035500504050050455005050500
 50005004995500499050049805004975500
 49705004965500496050049555004950500
-
+```
 
 The final unsigned CRC32 checksum value will then be "974947235".
-
-Previous
-Level3 Checksum (v2)
-Next
-Introduction
-Book Updates
-Example book update with asks, bids and checksum
-Book Checksum Calculation
-Example
